52818: failing to run the sample app successfully for the garage method scenario

--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -21,7 +21,12 @@ stages:
         build_type: npm
         script: |-
           #!/bin/bash
-          npm install
+      	  # The default Node.js version is 0.10.40
+      	  # To use Node.js 0.12.7, uncomment the following line:
+      	  #export PATH=/opt/IBM/node-v0.12/bin:$PATH
+      	  # To use Node.js 4.2.2, uncomment the following line:
+      	  #export PATH=/opt/IBM/node-v4.2/bin:$PATH
+      	  npm install
   - name: 'Run Unit Tests'
     inputs:
       - type: job
@@ -67,7 +72,7 @@ stages:
           then
             echo 'Slack WebHook Path is empty!'
           else
-            curl -X POST --data-urlencode 'payload={"text": "${APP_NAME}: ${SLACK_MESSAGE}"}' ${SLACK_WEBHOOK_PATH}
+            curl -X POST --data-urlencode 'payload={"text": "'"${APP_NAME}"': '"${SLACK_MESSAGE}"'"}' ${SLACK_WEBHOOK_PATH}
           fi
   - name: Deploy to Test
     inputs:
@@ -107,7 +112,7 @@ stages:
           then
             echo 'Slack WebHook Path is empty!'
           else
-            curl -X POST --data-urlencode 'payload={"text": "${APP_NAME}: ${SLACK_MESSAGE}"}' ${SLACK_WEBHOOK_PATH}
+            curl -X POST --data-urlencode 'payload={"text": "'"${APP_NAME}"': '"${SLACK_MESSAGE}"'"}' ${SLACK_WEBHOOK_PATH}
           fi
   - name: 'Run Tests - Performance & Scale'
     inputs:
@@ -234,5 +239,5 @@ stages:
           then
             echo 'Slack WebHook Path is empty!'
           else
-            curl -X POST --data-urlencode 'payload={"text": "${APP_NAME}: ${SLACK_MESSAGE}"}' ${SLACK_WEBHOOK_PATH}
+            curl -X POST --data-urlencode 'payload={"text": "'"${APP_NAME}"': '"${SLACK_MESSAGE}"'"}' ${SLACK_WEBHOOK_PATH}
           fi
