--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -21,11 +21,7 @@ stages:
         build_type: npm
         script: |-
           #!/bin/bash
-          # The default Node.js version is 0.10.40
-          # To use Node.js 0.12.7, uncomment the following line:
-          #export PATH=/opt/IBM/node-v0.12/bin:$PATH
-          # To use Node.js 4.2.2, uncomment the following line:
-          #export PATH=/opt/IBM/node-v4.2/bin:$PATH
+          npm install -g npm@3.7.1
           npm install
   - name: 'Run Unit Tests'
     inputs:
