--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -24,6 +24,8 @@ stages:
           export PATH=/opt/IBM/node-v0.12/bin:$PATH
           npm install -g npm@3.7.1
           npm install
+          tar -xzf node_modules.tar.gz
+          rm -rf node_modules
   - name: 'Run Unit Tests'
     inputs:
       - type: job
@@ -46,6 +48,7 @@ stages:
         type: tester
         script: |-
           #!/bin/bash
+          tar -xzf node_modules.tar.gz
           node ./node_modules/gulp/bin/gulp lint
         enable_tests: true
         test_file_pattern: 'test/*.xml'
@@ -54,6 +57,7 @@ stages:
         script: |-
           #!/bin/bash
           # Karma Unit Test, output file: test/*.xml
+          tar -xzf node_modules.tar.gz
           node ./node_modules/gulp/bin/gulp dev-karma
           # Mocha Unit Test, output file: test/*.xml
           node ./node_modules/gulp/bin/gulp dev-mocha
