--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -24,7 +24,7 @@ stages:
           export PATH=/opt/IBM/node-v0.12/bin:$PATH
           npm install -g npm@3.7.1
           npm install
-          tar -xzf node_modules.tar.gz
+          tar -czf node_modules.tar.gz node_modules
           rm -rf node_modules
   - name: 'Run Unit Tests'
     inputs:
